# multi-component-causal-tracing

./: CITATION.bib  LICENSE  README.md  pyproject.toml  requirements-vbd.txt  requirements.txt  train_attention_winobias.py  train_attention_winobias_llama.py  train_attention_winobias_qwen.py  train_attention_winogender.py  train_attention_winogender_llama.py  train_attention_winogender_qwen.py  train_factual.py  train_mlp.py  train_mlp_llama.py  train_mlp_qwen.py
binding/: __init__.py  requirements-vbd.txt  variable_binding.py  variable_binding_utils.py
data/professions/: female_occupations.txt  male_occupations.txt  templates.txt
datasets/: __init__.py  counterfact.py  professions.py  winobias.py  winogender.py
utils/: __init__.py  experiment.py  utils_all.py  utils_attention.py  utils_attention_new.py  utils_mlp.py  utils_qwen.py
